--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "web.d.ts",
   "dependencies": {
     "jsdom": "*",
-    "colorette": "*"
+    "colorette": "*",
+    "chokidar": "*"
   }
 }
