--- a/package.json
+++ b/package.json
@@ -5,9 +5,141 @@
   "module": "node.esm.js",
   "browser": "web.js",
   "types": "web.d.ts",
+  "keywords": [
+    "$hyoo_todomvc",
+    "$hyoo",
+    "$mol_report_bugsnag",
+    "$mol_report",
+    "$mol",
+    "$mol_dom_context",
+    "$mol_dom",
+    "$mol_dom_context_context.ts",
+    "$node",
+    "$node_node.ts",
+    "$node_modules",
+    "$mol_exec",
+    "$mol_log3",
+    "$mol_log3_log3.ts",
+    "$mol_tree",
+    "$mol_object2",
+    "$mol_ambient",
+    "$mol_owning",
+    "$mol_delegate",
+    "$mol_fail_hidden",
+    "$mol_fail",
+    "$mol_type_writable",
+    "$mol_type",
+    "$mol_deprecated",
+    "$mol_env",
+    "$mol_env_env.ts",
+    "$mol_style_attach",
+    "$mol_style",
+    "$mol_after_tick",
+    "$mol_after",
+    "$mol_string",
+    "$mol_string_string.view.tree",
+    "$mol_string_-view.tree_string.view.tree.ts",
+    "$mol_view_view",
+    "$mol_view",
+    "$mol_theme",
+    "$mol_style_func",
+    "$mol_style_unit",
+    "$mol_decor",
+    "$mol_skin",
+    "$mol_window",
+    "$mol_object",
+    "$mol_mem",
+    "$mol_wire_mem",
+    "$mol_wire",
+    "$mol_wire_sub",
+    "$mol_wire_pub",
+    "$mol_wire_cursor",
+    "$mol_wire_fiber",
+    "$mol_wire_pub_sub",
+    "$mol_dev_format",
+    "$mol_dev",
+    "$mol_compare_deep",
+    "$mol_compare",
+    "$mol_key",
+    "$mol_guid",
+    "$mol_after_frame",
+    "$mol_after_timeout",
+    "$mol_wire_method",
+    "$mol_fail_log",
+    "$mol_fail_catch",
+    "$mol_view_selection",
+    "$mol_dom_qname",
+    "$mol_const",
+    "$mol_dom_render_attributes",
+    "$mol_dom_render",
+    "$mol_wire_async",
+    "$mol_plugin",
+    "$mol_dom_render_styles",
+    "$mol_dom_render_children",
+    "$mol_dom_render_fields",
+    "$mol_memo",
+    "$mol_wrapper",
+    "$mol_func_name",
+    "$mol_func",
+    "$mol_type_pick",
+    "$mol_type_keys_extract",
+    "$mol_type_keys",
+    "$mol_hotkey",
+    "$mol_hotkey_-view.tree_hotkey.view.tree.ts",
+    "$mol_hotkey_hotkey.view.tree",
+    "$mol_keyboard",
+    "$mol_gap",
+    "$mol_dom_listener",
+    "$mol_button",
+    "$mol_button_button.view.tree",
+    "$mol_button_-view.tree_button.view.tree.ts",
+    "$mol_speck",
+    "$mol_speck_speck.view.tree",
+    "$mol_speck_-view.tree_speck.view.tree.ts",
+    "$mol_link",
+    "$mol_style_define",
+    "$mol_style_guard",
+    "$mol_type_result",
+    "$mol_type_error",
+    "$mol_style_properties",
+    "$mol_type_override",
+    "$mol_style_pseudo",
+    "$mol_style_sheet",
+    "$mol_link_-view.tree_link.view.tree.ts",
+    "$mol_link_link.view.tree",
+    "$mol_state_arg",
+    "$mol_state",
+    "$mol_check",
+    "$mol_button_minor",
+    "$mol_button_minor_minor.view.tree",
+    "$mol_button_minor_-view.tree_minor.view.tree.ts",
+    "$mol_button_typed",
+    "$mol_button_typed_typed.view.tree",
+    "$mol_button_typed_-view.tree_typed.view.tree.ts",
+    "$mol_check_-view.tree_check.view.tree.ts",
+    "$mol_check_check.view.tree",
+    "$mol_maybe",
+    "$mol_scroll",
+    "$mol_scroll_-view.tree_scroll.view.tree.ts",
+    "$mol_scroll_scroll.view.tree",
+    "$mol_state_session",
+    "$mol_print",
+    "$mol_list",
+    "$mol_list_list.view.tree",
+    "$mol_list_-view.tree_list.view.tree.ts",
+    "$mol_support_css",
+    "$mol_support",
+    "$mol_mem_cached",
+    "$mol_wire_probe",
+    "$mol_bar",
+    "$mol_bar_bar.view.tree",
+    "$mol_bar_-view.tree_bar.view.tree.ts",
+    "$hyoo_todomvc_-view.tree_todomvc.view.tree.ts",
+    "$hyoo_todomvc_todomvc.view.tree",
+    "$mol_state_local"
+  ],
   "dependencies": {
     "jsdom": "*",
-    "colorette": "*",
-    "chokidar": "*"
+    "colorette": "*"
   }
 }
