--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "$mol_wire_sub",
     "$mol_wire_pub",
     "$mol_wire_cursor",
+    "$mol_wire_fiber_persist",
     "$mol_wire_fiber",
     "$mol_wire_pub_sub",
     "$mol_dev_format",
@@ -65,6 +66,7 @@
     "$mol_key",
     "$mol_guid",
     "$mol_wire_method",
+    "$mol_wire_fiber_temp",
     "$mol_fail_log",
     "$mol_fail_catch",
     "$mol_view_selection",
