Deployed using Blazing fast GitHub Pages deploy

--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
     "$mol_dev",
     "$mol_after_frame",
     "$mol_after_timeout",
-    "$mol_compare_deep",
-    "$mol_compare",
     "$mol_key",
     "$mol_guid",
     "$mol_wire_method",
     "$mol_wire_fiber_temp",
+    "$mol_compare_deep",
+    "$mol_compare",
     "$mol_fail_log",
     "$mol_fail_catch",
     "$mol_view_selection",
@@ -107,10 +107,22 @@
     "$mol_type_override",
     "$mol_style_pseudo",
     "$mol_style_sheet",
+    "$mol_icon",
+    "$mol_icon_icon.view.tree",
+    "$mol_icon_-view.tree_icon.view.tree.ts",
+    "$mol_svg_root",
+    "$mol_svg",
+    "$mol_svg_-view.tree_svg.view.tree.ts",
+    "$mol_svg_svg.view.tree",
+    "$mol_state_time",
+    "$mol_state",
+    "$mol_svg_root_root.view.tree",
+    "$mol_svg_root_-view.tree_root.view.tree.ts",
+    "$mol_svg_path",
+    "$mol_svg_path_-view.tree_path.view.tree.ts",
     "$mol_link_-view.tree_link.view.tree.ts",
     "$mol_link_link.view.tree",
     "$mol_state_arg",
-    "$mol_state",
     "$mol_check",
     "$mol_button_minor",
     "$mol_button_minor_minor.view.tree",
