Deployed using Blazing fast GitHub Pages deploy

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "$mol_exec",
     "$mol_log3",
     "$mol_tree",
+    "$mol_term_color",
+    "$mol_term",
     "$mol_env",
     "$mol_string",
     "$mol_view_view",
@@ -63,6 +65,7 @@
     "$mol_memo",
     "$mol_wrapper",
     "$mol_dom_qname",
+    "$mol_wire_watch",
     "$mol_const",
     "$mol_dom_render_attributes",
     "$mol_dom_render",
@@ -113,7 +116,6 @@
     "$mol_state_local"
   ],
   "dependencies": {
-    "colorette": "*",
     "jsdom": "*"
   }
 }
