--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "$mol_maybe",
     "$mol_scroll",
     "$mol_print",
+    "$mol_paragraph",
     "$mol_list",
     "$mol_support_css",
     "$mol_support",
