--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "$mol_window",
     "$mol_object",
     "$mol_mem",
-    "$mol_wire_mem",
+    "$mol_wire_solo",
     "$mol_wire",
     "$mol_wire_sub",
     "$mol_wire_pub",
@@ -60,6 +60,9 @@
     "$mol_wire_task",
     "$mol_compare_deep",
     "$mol_compare",
+    "$mol_type_tail",
+    "$mol_wire_plex",
+    "$mol_type_error",
     "$mol_fail_log",
     "$mol_fail_catch",
     "$mol_view_selection",
@@ -90,7 +93,6 @@
     "$mol_style_define",
     "$mol_style_guard",
     "$mol_type_result",
-    "$mol_type_error",
     "$mol_style_properties",
     "$mol_type_override",
     "$mol_style_pseudo",
