--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "$mol_type_keys_extract",
     "$mol_type_keys",
     "$mol_hotkey",
+    "$mol_keyboard_code",
     "$mol_keyboard",
     "$mol_layer",
     "$mol_dom_listener",
