--- a/package.json
+++ b/package.json
@@ -136,7 +136,8 @@
     "$mol_support",
     "$mol_mem_cached",
     "$mol_bar",
-    "$mol_state_local"
+    "$mol_state_local",
+    "$mol_storage"
   ],
   "dependencies": {
     "jsdom": "*"
