--- a/package.json
+++ b/package.json
@@ -137,7 +137,9 @@
     "$mol_mem_cached",
     "$mol_bar",
     "$mol_state_local",
-    "$mol_storage"
+    "$mol_storage",
+    "$mol_mem_persist",
+    "$mol_wire_sync"
   ],
   "dependencies": {
     "jsdom": "*"
