--- a/package.json
+++ b/package.json
@@ -140,9 +140,16 @@
     "$mol_state_local",
     "$mol_storage",
     "$mol_mem_persist",
-    "$mol_wire_sync"
+    "$mol_wire_sync",
+    "$mol_file",
+    "$mol_charset_decode",
+    "$mol_charset",
+    "$mol_charset_encoding",
+    "$mol_charset_encode",
+    "$mol_compare_array"
   ],
   "dependencies": {
-    "jsdom": "*"
+    "jsdom": "*",
+    "chokidar": "*"
   }
 }
